<resources>
    <string name="app_name">BattleShip</string>
    <string name="search_nearby_devices">Rechercher les appareils à proximité</string>
    <string name="Connect">Se Connecter</string>
    <string name="connexion_success">Connexion successful with&#160;</string>
    <string name="paired_devices">Appareils Jumelés</string>
    <string name="other_devices">Autres Appareils</string>
    <string name="connexion_with_host_ended">La connexion a été perdue</string>
    <string name="device_discovery_finished">La recherche d\'appareils s\'est terminée</string>
    <string name="looking_for_nearby_devices">Recherche d\'appareils en cours…</string>
    <string name="no_device_selected">Aucun appareil n\'est sélectionné !</string>
    <string name="disconnect">Disconnect</string>
    <string name="update_paired_devices">Actualiser la liste des appareils jumelés</string>
    <string name="connexion_failed">La connexion a échoué</string>
    <string name="make_discoverable">Rendre mon appareil détectable</string>
    <string name="Ship1">Ship1</string>
    <string name="rotation">Rotation</string>
    <string name="commencer_la_partie">Commencer la partie</string>
    <string name="mes_bateaux">Mes Bateaux</string>
    <string name="your_turn">C\'est votre tour d\'attaquer</string>
    <string name="opp_turn">En attente que l\'adversaire attaque…</string>
    <string name="abandonner">Abandonner</string>
    <string name="aleatoire">Aléatoire</string>
    <string name="reinitialiser_la_grille">Réinitialiser la grille</string>
    <string name="connexion">Connexion</string>
    <string name="waiting_for_opponent">En attente de l\'adversaire…</string>
    <string name="rejouer">Rejouer ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="victory">Victoire! :^D</string>
    <string name="defeat">Défaite… >:^(</string>
    <string name="retour_au_menu">Retour au menu</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="connexion_denied">L\'adversaire a refusé la connexion</string>

</resources>
