<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game"
    android:background="@drawable/battleship_bg">

    <LinearLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_turn_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:text="@string/your_turn"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeStepGranularity="2sp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:gravity="center" />

        <com.example.gabmi.battleship.ShipGridView
            android:id="@+id/oppGrid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:background="@drawable/battleship_grid">
        </com.example.gabmi.battleship.ShipGridView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mes_bateaux"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeStepGranularity="2sp"
                    android:textStyle="bold"
                    android:textColor="@color/Black"
                    android:gravity="bottom|start" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40">

                <com.example.gabmi.battleship.ShipGridView
                    android:id="@+id/myGrid"
                    android:layout_width="0dp"
                    android:layout_weight="55"
                    android:layout_height="match_parent"
                    android:background="@drawable/battleship_grid">
                </com.example.gabmi.battleship.ShipGridView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="45"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/gameEndLayout"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="75"
                        android:orientation="vertical"
                        android:background="@color/White"
                        android:visibility="invisible">
                        <TextView
                            android:id="@+id/win_lose_tv"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="12sp"
                            app:autoSizeMaxTextSize="100sp"
                            app:autoSizeStepGranularity="2sp"
                            android:textColor="@color/Black"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/rejouer"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="12sp"
                            app:autoSizeMaxTextSize="100sp"
                            app:autoSizeStepGranularity="2sp"
                            android:textColor="@color/Black"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1">

                            <Button
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/oui"
                                android:onClick="Rematch" />
                            <Button
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/non"
                                android:onClick="NoRematch" />
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/surrender_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="25"
                        android:layout_gravity="end"
                        android:text="@string/abandonner"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textColor="@color/Black"
                        android:onClick="Surrender" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
